Update docs and tunning leaderboard module
